# MusicPlayer

./: .gitignore  CMakeLists.txt  main.cpp
adapters/qt/: QtAudioEngine.cpp  QtAudioEngine.h  QtDialog.cpp  QtDialog.h  QtDisplayWidget.cpp  QtDisplayWidget.h  QtDragDrop.cpp  QtDragDrop.h  QtLayoutHelper.cpp  QtLayoutHelper.h  QtLayoutUtil.cpp  QtLayoutUtil.h  QtLibraryWidget.cpp  QtLibraryWidget.h  QtNotification.h  QtPlaybackPanel.cpp  QtPlaybackPanel.h  QtPlaybackWidget.cpp  QtPlaybackWidget.h  QtPlaylistDisplay.cpp  QtPlaylistDisplay.h  QtProgressPanel.cpp  QtProgressPanel.h  QtSearchOverlay.cpp  QtSearchOverlay.h  QtSortHeader.cpp  QtSortHeader.h  QtToolbar.cpp  QtToolbar.h  QtView.cpp  QtView.h  QtViewFactory.cpp  QtViewFactory.h  QtVolumePanel.cpp  QtVolumePanel.h
controller/: Controller.cpp  Controller.h  CustomMode.cpp  CustomMode.h  DateMode.cpp  DateMode.h  DisplayBridge.cpp  DisplayBridge.h  DisplayDispatcher.cpp  DisplayDispatcher.h  DurationMode.cpp  DurationMode.h  LibraryBridge.cpp  LibraryBridge.h  LibraryDispatcher.cpp  LibraryDispatcher.h  PlaybackBridge.cpp  PlaybackBridge.h  PlaybackDispatcher.cpp  PlaybackDispatcher.h  PlaylistRenderer.cpp  PlaylistRenderer.h  SearchController.cpp  SearchController.h  SortController.cpp  SortController.h  SortMode.cpp  SortMode.h  TitleAscending.cpp  TitleAscending.h  TitleDescending.cpp  TitleDescending.h
model/: Advertisement.cpp  Advertisement.h  Arrangement.cpp  Arrangement.h  Channel.cpp  Channel.h  DateSort.cpp  DurationSort.cpp  FileMetadata.cpp  FileMetadata.h  Hash.cpp  Hash.h  IPlaybackListener.h  IRepeatMode.h  ISorting.h  Model.cpp  Model.h  MusicLibrary.cpp  MusicLibrary.h  MusicPlayer.cpp  MusicPlayer.h  NoRepeatMode.cpp  NoRepeatMode.h  PlaybackNotifier.cpp  PlaybackNotifier.h  Playlist.cpp  Playlist.h  QuickSort.cpp  QuickSort.h  RepeatAllMode.cpp  RepeatAllMode.h  RepeatMode.cpp  RepeatMode.h  RepeatOneMode.cpp  RepeatOneMode.h  RepeatStrategy.cpp  RepeatStrategy.h  ShellSort.cpp  ShellSort.h  Song.cpp  (+4 more)
model/ads/: Advertisement.cpp  Advertisement.h  Dice.cpp  Dice.h  IAdPolicy.h  RandomAdPolicy.cpp  RandomAdPolicy.h
model/arrangement/: Arrangement.cpp  Arrangement.h  DateSort.cpp  DateSort.h  DurationSort.cpp  DurationSort.h  ISortingAlgorithm.h  QuickSort.cpp  QuickSort.h  ShellSort.cpp  ShellSort.h
model/core/: FileMetadata.cpp  Playlist.cpp  Playlist.h  Song.cpp  Song.h
model/events/: DisplayEventNotifier.cpp  DisplayEventNotifier.h  IDisplayEvent.h  ILibraryEvent.h  IPlaybackEvent.h  IPlaybackListener.h  IPlaylistVisitor.h  LibraryEventNotifier.cpp  LibraryEventNotifier.h  PlaybackEventNotifier.cpp  PlaybackEventNotifier.h  PlaybackNotifier.cpp  PlaybackNotifier.h
model/playback/: Channel.cpp  Channel.h
model/repeat/: NoRepeatMode.cpp  NoRepeatMode.h  RepeatAllMode.cpp  RepeatAllMode.h  RepeatMode.cpp  RepeatMode.h  RepeatOneMode.cpp  RepeatOneMode.h  RepeatStrategy.cpp  RepeatStrategy.h
resources/: styles.qss
test/: DirectoryTestFixture.cpp  DirectoryTestFixture.h  MockPlaybackListener.cpp  MockPlaybackListener.h  ModelTestFixture.cpp  ModelTestFixture.h  RegressionTest.cpp  RegressionTest.h  TestPlaylistVisitor.cpp  TestPlaylistVisitor.h
test/model/: AdvertisementTest.cpp  AdvertisementTest.h  FileMetadataTest.cpp  FileMetadataTest.h  ModelTest.cpp  ModelTest.h  MusicLibraryTest.cpp  MusicLibraryTest.h  PlaylistTest.cpp  PlaylistTest.h  SongTest.cpp  SongTest.h  SortingTest.cpp  SortingTest.h
test/use_cases/: AddSongUseCaseTest.cpp  AddSongUseCaseTest.h  NavigatePlaylistUseCaseTest.cpp  NavigatePlaylistUseCaseTest.h  PlaySongUseCaseTest.cpp  PlaySongUseCaseTest.h  RemoveSongUseCaseTest.cpp  RemoveSongUseCaseTest.h  SearchSongUseCaseTest.cpp  SearchSongUseCaseTest.h  SortPlaylistUseCaseTest.cpp  SortPlaylistUseCaseTest.h
view/: IAudioPlayer.h  IControlPanel.h  IDialog.h  IDisplayBoard.h  IDisplayControl.h  IDisplayView.h  ILibraryBoard.h  ILibraryControl.h  ILibraryView.h  INotification.h  IPlaybackBoard.h  IPlaybackControl.h  IPlaybackView.h  IPlayerListener.h  IPlayerView.h  IPlaylistPanel.h  ISearchPanel.h  View.cpp  View.h
